--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #2c3e50;
+  color: white;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-size: calc(20px + 5vw);
 }
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.length-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.break,
+.session {
+  padding: 10px;
+  margin: 10px;
+  font-size: calc(10px + 2vw);
+}
+.length {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  padding: 10px;
+}
+.timer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: calc(10px + 1vw);
+  border-radius: calc(15px + 1vw);
+  border: 5px solid #95a5a6;
 }
 
-.App-link {
-  color: #61dafb;
+#timer-label {
+  font-size: calc(10px + 2vw);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#time-left {
+  font-size: calc(25px + 5vw);
+}
+.options {
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 10px;
+  /* margin-top: 10px; */
+  font-size: calc(10px + 2vw);
+}
+#start_stop,
+#reset {
+  margin: 8px;
 }
